--- a/src/main/webapp/message_ru.properties
+++ b/src/main/webapp/message_ru.properties
@@ -1,11 +1,5 @@
-#email.exception=Неправильный email адресс. Пример: qwerty123@mail.ru
-#book.exception=Некорректный формат
-#order.exception=Некоректный order
-#user.exception=Некоректный user
-#author.exception=Некоректный формат
-
-email.exception=incorrect email address. Example: qwerty123@mail.com
-book.exception=incorrect format
-order.exception=incorrect order
-user.exception=incorrect user
-author.exception=incorrect format
+email.exception=Неправильный email адресс. Пример: qwerty123@mail.ru
+book.exception=Некорректный формат
+order.exception=Некоректный order
+user.exception=Некоректный user
+author.exception=Некоректный формат
